# eigen-models

./: .env.template  .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
eigen_models/: __init__.py  base.py
eigen_models/core/: __init__.py  channel_members.py  channel_message_reactions.py  channel_messages.py  channel_threads.py  channels.py  chat.py  cofounder_matches.py  cofounder_profiles.py  comments.py  github_accounts.py  github_repositories.py  group_messages.py  interactions.py  message_reactions.py  message_read_status.py  messages.py  notifications.py  posts.py  profile_views.py  profiles.py  project_activities.py  project_completions.py  project_group_join_requests.py  project_group_members.py  project_groups.py  project_invitations.py  project_join_requests.py  project_members.py  projects.py  push_tokens.py  subscriptions.py  sync_status.py  users.py
eigen_models/utils/: __init__.py  database.py
migrations/alembic/: env.py  script.py.mako
migrations/alembic/versions/: 075e4759c4a3_added_userspostsprofilesgithub_accounts.py  2421de911768_add_interactions.py  26b1992eb766_added_notifications.py  415abc3804b0_add_projects_tables.py  5d7383e0d5a6_added_channelsproject_images.py  68771abc7470_added_user_interaction.py  898e7d3131ee_added_chatmessages.py  a1b2c3d4e5f6_add_figma_integration_fields.py  b1c2d3e4f5a6_add_project_groups.py  c3d4e5f6a7b8_add_comments_table.py  d22448dad35e_added_attachments_in_comments.py  db6168b7357b_init.py  e1f2a3b4c5d6_add_push_tokens.py  f2a3b4c5d6e7_add_public_id_uuidv7.py  g3b4c5d6e7f8_finalize_public_id_uuidv7.py  h4c5d6e7f8g9_add_project_id_to_posts.py
migrations/scripts/: apply_migrations.sh  generate_migration.sh  migration_helper.sh  validate_migration_state.sh
scripts/: README.md  migrate_public_ids_to_uuidv7.py
